test/types/imag/opequals2.2.good
opequals2.chpl:6: error: type mismatch in assignment from complex(128) to imag(64)
